--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,12 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
+  draggable_home: ^1.0.5
+  dio: ^5.4.1
+  dotted_border: ^2.1.0
+  file_picker: ^6.1.1
+  material: ^1.0.0+2
+  iconsax: ^0.0.8
 
 dev_dependencies:
   flutter_test:
@@ -57,6 +63,8 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
+  assets:
+    - assets/
 
   # To add assets to your application, add an assets section, like this:
   # assets:
