--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,8 @@ dependencies:
   file_picker: ^6.1.1
   material: ^1.0.0+2
   iconsax: ^0.0.8
+  intro_screen_onboarding_flutter: ^1.0.0
+  http: ^1.2.1
 
 dev_dependencies:
   flutter_test:
